# RINmaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RING-Project.sln  TODO.txt  TODOs.txt
RING-Project/: .gitignore  BlackBoxTest.cpp  BlackBoxTest.h  KDTreeTest.cpp  RING-Project.args.json  RING-Project.vcxproj  RING-Project.vcxproj.filters  bondfunctors.h  bonds.h  build_all.sh  config.cpp  energy.cpp  energy.h  entity.cpp  entity.h  geom.h  interval.h  kdpoint.h  kdtree.h  log_manager.h  main.cpp  main.h  mykdpoint.h  network.cpp  network.h  parameters.cpp  parameters.h  pdb_data.cpp  pdb_data.h  prelude.h  records.cpp  records.h  rin.cpp  rin.h  structure.cpp  structure.h
RING-Project/libraries/CLI11/: CLI11.hpp
TestCase/Origin/HBond/: hbond_pos1_test.pse
TestCase/Origin/IonIon_test/positive_test/pos1_test/: pos1_test.pse
TestCase/Origin/IonIon_test2/: test1_distanze
TestCase/Origin/Picat/: NOTE
TestCase/Origin/picat2/test_picat/: test_picat.pse
TestCase/Origin/picat2/test_picat_neg1/: NOTE  test_picat_neg1.pse
TestCase/Origin/picat2/test_picat_neg2/: NOTE  test_picat_neg2.pse
TestCase/Origin/picat2/test_picat_pos1/: NOTE
TestCase/Origin/test_h-bond/: Note
TestCase/Origin/test_pipi/: NOTE PiPi
TestCase/Origin/test_pipi/pip_pos2/: pip_pos2.pse
TestCase/Origin/test_vdw/: NOTE_vdw
TestCase/Origin/test_vdw2/test_vdw_neg2/: NOTE.txt
TestCase/Origin/test_vdw2/test_vdw_neg3/: NOTE.txt
TestCase/Origin/test_vdw2/test_vdw_neg4/: NOTE.txt
TestCase/Origin/test_vdw3/test_vdw_pos2/: NOTE.txt
TestCase/Origin/test_vdw3/test_vdw_pos3/: NOTE.txt  test_vdw_pos3.pse
Xml/: 2cjr.xml  6j8j.xml
app/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
app/headers/: bond_queries.h  bonds.h  chemical_entity.h  config.h  energy.h  log_manager.h  noncovalent_bonds.h  ns_bond.h  ns_chemical_entity.h  ns_record.h  ns_secondary_structure.h  pdb_records.h  prelude.h  rin_graph.h  rin_maker.h  rin_network.h  rin_params.h  secondary_structures.h  utils.h
app/headers/spatial/: geometry.h  kdtree.h
app/include/: cli_utils.h  config.h  csvfile.h  fix_hydrogens.h  log_manager.h  ns_bond.h  ns_chemical_entity.h  ns_record.h  ns_secondary_structure.h  prelude.h  rin_graph.h  rin_maker.h  rin_params.h  utils.h
app/include/spatial/: geometry.h
app/sources/: bond_queries.cpp  bonds.cpp  chemical_entity.cpp  cli_utils.cpp  config.cpp  csvfile.cpp  energy.cpp  fix_hydrogens.cpp  log_manager.cpp  noncovalent_bonds.cpp  ns_bond.cpp  ns_chemical_entity.cpp  ns_record.cpp  ns_secondary_structure.cpp  pdb_records.cpp  rin_graph.cpp  rin_maker.cpp  rin_network.cpp  rin_params.cpp  runtime_params.cpp  secondary_structures.cpp  utils.cpp
app/sources/private/: chemical_entity_impl.h  impl_chemical_entity.h  impl_rin_graph.h  impl_rin_maker.h  rin_maker_impl.h
headers/: bond_network.h  bond_queries.h  chemical_entities.h  chemical_entity.h  computation.h  graphml_output.h  noncovalent_bonds.h  pdb_data.h  pdb_records.h  prelude.h  rin_maker.h  secondary_structures.h
headers/spatial/: kdpoint.h  kdtree.h
headers/utils/: prelude.h
logs/: main.txt
sources/: CMakeLists.txt  chemical_entities.cpp  log_manager.cpp  main.cpp  secondary_structures.cpp
sources/tests/: BlackBoxTest.cpp  KDTreeTest.cpp
src/: CMakeLists.txt  bond_network.cpp  chemical_entity.cpp  computation.cpp  energy.cpp  entity.cpp  graphml_output.cpp  main.cpp  main2.cpp  pdb_data.cpp  pdb_records.cpp  prelude.cpp  records.cpp  rin_maker.cpp  structure.cpp
src/computation/: CMakeLists.txt
src/config/: CMakeLists.txt
src/energy/: CMakeLists.txt
src/entities/: CMakeLists.txt
src/graph/: CMakeLists.txt
src/headers/: bondfunctors.h  bonds.h  computation.h  config.h  energy.h  entity.h  main.h  network.h  noncovalent_bonds.h  pdb_data.h  records.h  rin.h
src/headers/tests/: mykdpoint.h
src/headers/utils/: interval.h  prelude.h
src/headers/utils/kdtree/: kdpoint.h  kdtree.h
src/headers/utils/spatial/: kdpoint.h  kdtree.h
src/records/: CMakeLists.txt
src/secondary_structures/: CMakeLists.txt
test/: BlackBoxTest.cpp  BlackBoxTest.h  CMakeLists.txt  KDTreeTest.cpp  Makefile  all_tests.cpp  blackbox_test.cpp  blackbox_test.h  kdtree_test.cpp  mykdpoint.h  run_test.sh
test/libraries/pugixml/: pugixml.cpp
test_case/HBond/: Note
test_case/Origin/IonIon_test/: convert.sh
test_case/Origin/IonIon_test/positive_test/pos1_test/: pos1_distance
test_case/Origin/IonIon_test2/: test3_distanze
test_case/Origin/ionion_test3/: note
test_case/Origin/picat2/test_picat/: NOTE
test_case/Origin/test_pipi/pip_neg1/: pip_neg1.pse
test_case/Origin/test_pipi/pip_neg2/: pip_neg2.pse
test_case/Origin/test_pipi/pip_neg4/: pip_neg4.pse
test_case/Origin/test_pipi/pip_pos1/: pipi_pos1.pse
test_case/Origin/test_vdw2/test_vdw_neg1/: NOTE.txt
test_case/Origin/test_vdw3/test_vdw_pos2/: test_vdw_pos2.pse
test_case/origin/ionion_test/negative_test/: neg1.pse  neg1_distanze
test_case/origin/ionion_test/positive_test/pos2_test/: pos.pse  pos2_distance
test_case/origin/ionion_test2/: test2_distanze
test_case/origin/test_pipi/pip_neg3/: pip_neg3.pse
